BEN1: profile whether TagState tag-map growth dominates set-shaped subjects' cost (computenet-i61m) (#499)
* BEN1: pre-register the [BEN1-28] tag-map-growth allocation criterion (computenet-i61m)

The criterion is committed while the -prof gc sweep that feeds it is still
running, so the thresholds cannot have been chosen to fit the numbers.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* BEN1: profile the set-shaped subjects' per-delta allocation; [BEN1-28] RETIRES on the allocation channel (computenet-i61m)

-prof gc over Subject.setShaped() x both directions at the class's own
annotation config, on the pinned host at a polled quiesced trough. Per-delta
allocation is 13012.6-30561.9 B/op; the generous upper bound on TagState
tag-map growth's share of it is 0.0168-0.0393, below NEGLIGIBLE_SHARE in all
16 of 16 rows.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* BEN1: record the underpowered iteration-length probe that cuts against the allocation verdict (computenet-i61m)

The -prof gc sweep retires [BEN1-28] on allocation only. A cheap direct probe of
the TIME channel — 1s vs 10s measurement iterations over the same eight subjects —
found COUNT and FLAT_MAP at under half their throughput at 10s with tight error
bars. It is underpowered, confounded and internally inconsistent, and it is
reported rather than dropped because it does not support extending RETIRES to
time. Filed as computenet-bzwx.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 5 (1M context) <noreply@anthropic.com>